--- a/pom.xml
+++ b/pom.xml
@@ -55,12 +55,20 @@
     </dependency>
   </dependencies>
   <build>
-    <!-- <resources>
-      <resource>
-        <directory>report</directory>
-      </resource>
-    </resources> -->
     <plugins>
+      <plugin>
+        <groupId>org.jboss.jandex</groupId>
+        <artifactId>jandex-maven-plugin</artifactId>
+        <version>1.1.0</version>
+        <executions>
+            <execution>
+                <id>make-index</id>
+                <goals>
+                    <goal>jandex</goal>
+                </goals>
+            </execution>
+        </executions>
+    </plugin>
       <plugin>
         <groupId>io.quarkus</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
